# advent-of-code

./: adventofcode.cabal
2015/1/: Main.hs
2015/2/: Main.hs
2015/3/: Main.hs
2015/4/: Main.hs
2015/5/: Main.hs
2015/6/: Main.hs
2015/7/: AbsCircuit.hs  AbsCircuit.hs.bak  Circuit.cf  DocCircuit.txt  DocCircuit.txt.bak  LexCircuit.hs  LexCircuit.x  LexCircuit.x.bak  Main.hs  Makefile  ParCircuit.info  ParCircuit.y  ParCircuit.y.bak  PrintCircuit.hs  PrintCircuit.hs.bak  SkelCircuit.hs  SkelCircuit.hs.bak  TestCircuit  TestCircuit.hs  TestCircuit.hs.bak  naive.hs
2015/8/: Main.hs
2015/9/: Main.hs
2021/1/: Main.hs
2021/10/: Main.hs
2021/11/: 11.js  Main.hs
2021/12/: Main.hs
2021/13/: Main.hs
2021/14/: Main.hs
2021/15/: Main.hs  test.txt
2021/16/: Main.hs
2021/17/: Main.hs
2021/18/: Main.hs
2021/19/: Main.hs
2021/2/: Main.hs
2021/3/: Main.hs
2021/4/: Main.hs
2021/5/: Main.hs
2021/6/: Main.hs
2021/7/: Main.hs
2021/8/: Main.hs
2021/9/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
